--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,18 @@
 [project]
 dependencies = [
   "customtkinter>=5.2.2",
-  "ruff>=0.8.1",
 ]
 description = "Add your description here"
 name = "python-gui-for-ai"
 readme = "README.md"
 requires-python = ">=3.12"
 version = "0.1.0"
+
+[dependency-groups]
+dev = [
+  "pyinstaller>=6.11.1",
+  "ruff>=0.8.1",
+]
 
 [tool.ruff]
 # 1行の最大文字数
