--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 [project]
 dependencies = [
   "customtkinter>=5.2.2",
+  "tkhtmlview>=0.3.1",
 ]
 description = "Add your description here"
 name = "python-gui-for-ai"
